[gd_scene load_steps=3 format=4 uid="uid://be6hkb4cfi0sq"]

[ext_resource type="Script" uid="uid://cj03ha8wc70d0" path="res://scenes/in_game_menus/pause_menu.gd" id="1_4kb8u"]

[sub_resource type="AudioStreamWAV" id="AudioStreamWAV_4kb8u"]
data = PackedByteArray("cW9hZgAAOrIBAKxEFAAIGAAAAAAAAAAAAAAAAOAAQACgSLILzMn00JTKbmrJZIRKxVzevNZegFLF2EHVBTC6sLcTJXaVu3pAwglQVoAxFJ/GE8bdPQggSrLRZSrQ9kABttw+nTMcINaX9L0zt065e7jRpBSfSBbUwMhMkDQFPsKdlL7TQsKRwqYBoyv6WyQHkzG5erEfzH+qEampsuXVl8KNRtWBIYzYvVSeoAZH0I2jt74sWS73iKGfGCFU3KKgygAEAlkgAtCklQ+5np+kCpeVuSK/ivy6pMxGP1SmYoCmygAEYA/+dJiFe1tiDThnlp0z3a8sp9KEtP8ioyP9tpfB5mZB9qm1mvoxmI03Y1WmAHayxs20E68CpYSQxdKLopWjOB/hKUCVUIAbZgwgT6OLbMzSbppkn+EDLlo+jJuwSAES3TsWwMTKIAqjZHICp4uqKGtV3ImXhqFnXXp+kndrgSqyqg7dlpKqkgLLt/mcHsqL3G3SH5WV0ffBdWwRtgBJKukxAumW5gWRDWlO7KRei78EqgRvkN3FGCoSts6c+WfRNkwrSJxvfKNKCzTdolRhsAPQ8tCq4i3bIvDC2IhJpV60sZIdorRrvuzHiwGnqYudDeMnIp6e/U1tUz7etsJJkEJcoGaa6m+Vk0P83qzJYwbAUoDplxIlgurKsJ+VHb9sUq5JlKdrWIbRDUBJsotkuuJSOkyVPYSZjepFi6ZI0TVYNQpyr9IOyBAJFoK0i2SyMCx2oKADpsgqaCYJppi1JmIA0y2liwAUE0VJTaQbJzPlta0RkXjLD8MkJMKwaCCVIL6URKyYdYgNKSbKhMEBN6tpVY+iGsnQGSEwW4WYVSfQ42JtlgkhIXtAjaufRh4gWm+wVKiT/CIEBZQFmpArBusxBOuEOdLpzFZIC6AfChYTf8MqkopwHhGYNq2iEEQbeEXIgqIAtEABrCASo3tIBI0uIFB083DSzI0BX5sgSrCrhDhIhXpK1AEgYG2PRDIm0REbbaATaB7kEJQQgf/F8QZx4WqQy0UwadCT+oXq2MYN9gTDhxlQXEN9qDGG9ap6lIneToVIIYAwYTbBgQgXiBtI4O54bp7e1k4mzYc04NZiBAqRjsxBoslHIkOO2k+cmi1hTnrIfpAmlb4CgHtLpQCFsNKA2gazISb/9oz2DcIxblLImCuClPFGDtmDsUWYyIwmQ4sVsBKRtaCQeE1lrIsCgQx6zObNqlaM4IFLYQADatGRmOhuzGoFMECDCSAXwkUm0XKItKPRL0P9eZN6VyMCvT1yXXpW+UuNqHr5mGy/dhT0gvmhoRG9SNhbMfdCBPzj8nRHahYZCvXSfFl1JLa2tnOOJHKwDSUICYBIQbrQsyoreEnBGA2xgJh8XWNDWmHEqGLaRlMFoCCCg8hCMEJlkJN/E6AJrcS46oQjvUNCQLIIZCtaEJ3K9mZvXLEqhwsH+nypQbkLM2ktf0CIghskxDtkmVFp2/029n3egSTVrRBVYtNSeR1xhO1rsYlSqY6M4mfEIaIAcK7YcFJBk2naN0hZAhmaJsYbUFhYHbZwfaIWaVkARMAGD+hZj1h+5tY2EUSxvnuhoWjuXU38JSF9nVNc0ChfprGAu1RKFPbAk0FpWopYHCjJu85QZLX1oU6MzVr0jSfkCN/yZlZkshAQ2oFW/ZGQkmHaGF0XpSJazrKhalNNoZp/oxBmqGAErTAyQlHLCSAfNDVKWWxE7EEhDnNKEkfaChI24kdHqhdmZ2BfWgCJFcNAIftRkoHwATJuWUUXGruAZSfCRVOIUiDszAFMrD+CzNH2WlWAaboeT5hCQmb/wJRj2oFEiX2lwIA6U0bOS4bLURSZRnoIZlpsNFM7KAkQ+iKgkEriBbokiBoBMDDmMkJEj1xAmWWo02sSykWSIrYUQDdkRiI2tRIt9rA7LwaFXi3BCjWvRLFAj2XqSlRFAsAEhkQzv/osj/3tlEjrCSKANLUALH9TgZSQftk3JmiyA1GIvzcmlJr6CmzXR1AYIi+MGQhOWgkwQUiUWExYBQTJBCYaOm7MYm3zKBc+5CzEg3H6UjCCRLIJQqNKO9IBFt+KCl0/DiWXxMn2STTa3v4UATBdMlFrLi9hjY0yXSi47Uy0WkgYraBGbYTDQwmuABMccDEz97UCDI/yEzUh/cVcjKF6MyI9NutzNEdGUSgAS0CQATalZBfCypooMmuABdvMBAk2yig4TaCEFDNbdICQILpQOJNEuMNFPs4s3meRlx9n7DRSXNDkAD5INtLLtmIzA1M2bFrIq04FVjKoqBSKhawQNkhhBJ8qQpk2yQFKKKgEsS3RFgM2tZMjJ7F+uEiaGoAyVMTUwIGwGzZWYKTAaKaYK5MKA86Q1QcmfI/D/lNgUDIaCeCpVAISI/YEESC2NjQumfQEmCL1sihZLIzHFTJ0LQtNlNmnbuAhFUX+cDW+2jJBKbKTSCKcJj9OEj1ghNgzWEUUSKQiWC7BtxFa6JbTIN84kwt0+UEggbWEAWWm/SQmo5oSBrZLKhRqjigEkigqLAiHbREA6B/2jEPv8QiaIttEmBWkkiAh2SCGmaGKUBBU7/ciQX/SFxG3lQBX8BkgGEXWgCkGWSIRQI7BgDLYIBgohkhkwBgXaEkifShEmRoJeR4EICAiIBMsJIkVlBIcr75No5XXZBkwIdYW2X9CGbTrszYRpxoYYsWknQpA1R5m2jbdM0kIFsrZZpwsLLYQ/8Ztif4VFhKYqUkJSAEzESBAEJYthGAdCKTFJEqWGQEArEQUAAgY/+MAIQAn//TsFyBbxX0pBR2wYnPw0SdNFTKQ/2YI4K0RhVJEyQVtwRjYWCRoQAEIGkohqB2sAKIU6+lpIbb9NBDbdlhST4YaFpkt19JBx0sWAvqakqAm7hKYCN9RKKa9GkhSn98jKM0XaAEGbzY41RNLYLLDToVHEsNsEV1g1oAemaiGAjay6hKpfvzQgL/YHQEWt8CBdlgeDEH6SelGCxLDfQnaQLpcFuhEsEUdBIEaQWQEDew2CRQfbCZQDNZRFMIVkJQKlJsSm6ACWEAQCBIAeCZKRJTVGCEEEkoCIksUADEpzQhFmhBLTQMQCMQKGI4tFCIBKpIXigoRBKHBEBMCqIggjJRIGCBgNqRRgNIUAkgSiAijARSKaUCIRDSCFBBBFEIAIoASUQAog1QlAhRZKzlzjJEMEQqkABIJBsAYEQiiCUQQGBBKCASaAKCaG4oINtNAJkMSiDHGqSQEURDTBJUQJKLDEImpphoNtkIWmmmSSCarGhYLbIlILLZZFoMsqloFlp0enCG06GGWWBpbLRNNYDQjE0UgItms11cQyAQA1SxVYxTNZZJapbKRFAstholkMMsUiQySwSQWGxJaKqoIbKaVEAhxgUMEkE0WxQECyQWSKRYJIIBAJYaoFkuhoENUVAMVQyQVSSmqmBZhJJIABVJBEglhq66glOASEEQFQwUSWhMKQRJJCCAJEkgogpNNQwgQCQEiCCkU0BBaAgCKqYgREIEgBINWOOAUgggAAE0SghLSRRYATjQAFBAghAmEAgIWrCoQGCEYFRDSDRJBEQCYFgEJBEgCkBAQSACkiGCACBBKIQTCcCaAFJogkpBEtMEUEQ2igGCCAhABaYLYKacZFghEBpgMAMkQEWAiCWGGmhZIITIYZacrEkphgmhogNMQWGAy1U2WiBbILJYLJIYpFksMBloQglgW2Uy2GWaqWBaYbJLXDBZBEktANlkFlhkQyGqQGKGqwRQbJIAZYZoDEEFMktNgpqsSSASASCC6CBBJc6YITJaJEgkUkChgMMgSE1U6KCWQCQ4GH7gx4fuNEEFgIhhgtIoVUGnLGKGCAxTSYBggSIDTEMFFEAQwhBIQCCCiCgkE0BATSKQAAIaAEIJEGFBGGNEQjHAE40AAEg2kwHaG2G2iFIoiOAFFFNASAQiiEEQiERCKcqAKZQIRGFEBpoowokgSADCEAA0QChasYaYRCCKIAdVDCY+LqTESCkQgE0SQSA/eo2yAWn62EFM1VEAIEAMUymiCQySXGRJCQIAYJZDBEVMtUFgBlhoWWiAgSxZVQRopoJKYIZdDEMMMstdMkEEVZV0wQyQSwxKpDTBLLLBJFhhihhhlgEsU0yCGyiGWwxTNTTBILIJZEgslgkggAsMVVQCySWWnGRLDBYaZIYNBEMEgEkhqgkEQwww0w2yrHBaJYYYAcbBaFghMMgsUMFkQwQQQaiUQwAv6uX04T0G3EgIEAgkiEFMUSQnKigEAkBIKCASCIRTIEJxoJpgAEgAU0QGAEQ0EVRRQAMEKCAICEAAIkNBENAMQ0CCnGCAimhUMcIBACYRQFpoogoEEGNMUUSSGWSEQihCKKRBSIKKBEoEAggAoAggU00YQAgiUAhBKCaJTBRBIFBMMIFBAAhEUwQwAEC00UQu37235/T4zFAMAkkNNhpkQ0xVUSQSmQRTTYDBBaoaZD98v+Vf3+/0QSywwwwKGwBYBIIIJJYLDEVMtVUMssEESWmGKiQWGqBJaoYJZLVBYFipkhpoEksMWGWWCA0ywyRVTLTBKYoYDEMNMElEkllkQGWSmmmmWWRNTDVDDTCaZFgsFosEkFpgWqQGqmCSQCABFrqgBpa/eEhABAAFhkAASCEQ4ymAAEhMYBACYRhRQEEAAIBFAoggQAgQAQAEEEBRRSITjjgCAEONIBGOOJooSgCiggigEURBCKIAAARDTFAooIlEIlokQEUigCCQCmBCCBRQABAAREAEIAAhEAogWiCU40AEwiBSKBABARTAJEEAAgIgEhFEPd+Gtht9e+QXusCMuj33XAj6j/f7jOMsSSSQymCGCSBZYJTIYLBIIFqgsMMtlipoQSy2KmCSWWRJLDLBIbDJIFpksUhglqhkWGSSyyWyamBJFBYJIYaqZEksMNimhkMMJ6O5xzb/+OhIJDDFTIYJID5v/r++v/v0S0WqGWWSwSRYRIJKqYJJJFmhgghqygkAWGGWCwySWCQV2P8/68uH1B3PAf7+zxCgSWAQGmmi1UQGu2e/uo26jDQXfobTTNmsNktm95Fs1EAGiW4icW2yeD/P7eAXUDa4M9uMlkUNokhKKaAIITjAJD/Bbdej9PaANl3zg9BR/lxARAJAKBcYIFoENNEAglggIYtv9/s1h9haIBCIBIBAKEgEAEIhNFNEQQCGCiCWGCAmw3/n+cmHqFhhpokEklksNeG/23f32XBLDDBJBLFBIFklglqhkgsMSxSSQSxQyaBZYpZIZZZLVFVVMNiklgkgWSSWKC0wwyRLBYYaoLIZJEkMEtUEkhgkWAQSyGSSWSQ93rbf691qvFhklgklhpqoW1UwAUSCWGRJsqYbBYDBLEMMsEgsBgMMVQ2C000wSyRYBAJAaYJDREgkpkMgMAtEWA00wCWmCGhIIBAMKCKaYEgkggEgkAIAFns9g82N8gBRCKAACCATjFNEFNFFFAAASA0QQA4QEYBITgIRQACaJEgAIwogBNFMY00QAQAQAAAc2gzwRKeW3AQCsRBKyB5gACwAMAAn/9+3pIKHHdSqTEAAAEEAAFAIGlOA9tp9vAgWxyCFF0mlgEFNAFEIgABMY0UAAQGACmg+X0eT0+VZCEggggoOMBNEOQfn9LB1qtgu+e+v2dH9yFokhkBoAosEO9y/X/w516hIaYLBJTBDTEkgkEMVWMkMF7ZRl/n8+dxJIaYDlTDDLDf69AP/f6/IWmCQyAUCmCQPbp6GzE/n4EEotEgEAEEkSSCSAAE0WARIDAJAaIIIKGosEFNMMMEkFd/h8vj6z+A7y+ngAw4fFEAgEklAIEFkSWigiASGAQAh0+nezwBV3DQjObCYeF7IQiUw0wEUQChJAIQMAQBRBEAIIJBAIooAQigCiAUwCihKTjRQQSIBBEAJCOMEAIhEJkNBBskhrtBIBCARRBBARDbdLyCJTFKIKBsNBs49nnwEz0WgeAjCSDQbawrbOIZoKnkNpthP/2w2x273G0G3RCuKZNHjvJ7cBnc+h+n8u5w+Xb6bRECYrCt2rgX/j2j4SSQ1UwwywwRYYYYYJBBDJFhgggMlslkESCWKGSwwwywf4d5///1/XEEsiqpgMhkUQwwS1QzUyCQ+vrtH/f7LnFqphghgMBggWCyGCCQwwwRKaYJJaYBaZFlshokENVMAWCwywwSGGGAPa9Pn/FD7/Bf4dT9ft22MQWCwWmSGCQQzH++AyefB5CabPrcT3LzoMnubbZkHBQhBRRRBBBTSaAPKvERKbRb4FcPNhs8nhIAwQKM+TU4efFFEJwoIxogAQUUQmiAUQgAEu3+93euxmAMb/bbax/3YLtvhdmts+/wneg0enyChhEgkEkBogEFEUQ4yAQmimmhaICIBBIIKIDHr0gDYXbhUMnG3vscrv/wVQasvo/yuvD2/1cAOMVj8HvVUW1wv4ywBcb/vrco5pD+/nr3/n938Jxv9+/+f+7w47fvqb39XTFgkAFEk0UVUUw11QwWmSwxZZaqaZJJIYEkkEgkhghggWGSSwSGCQQQiab/odoae5DPt179Ho/i0I+UNaL//8xhBAJLLBAIIaFgkEkggEgggAlO2Ohc3rqQs8OqC8DzmHCbjf5XS77e4S4wQCAUUQAAmyw2Ok2GW1BWXMaHOZ7bYU4QUQigiiEBAQCIAAQCAIFoooCNEAABISgigQigggABAKIRRRAARQBbfbbbXbfb4UUUSiimiiAA2cMUQiwWkyC5eHbSUL4NQAk8ltdnsntxTQARAIIIIIEgEAAAgAAEESCCAiAAQCAQG2S+PD9j53EopxghgNNFMGP5egx+fvww6fYbb/Q/7ZDs8n9fj3dfwSSyWCSSSSwxDDBJLDVTJJEhglpgipggkA6TXX//R36gb///5H+/B/DH/e79rn8cMFdQmOuq2m/w/V+CydcR/HCd1MFf5d7vUPHO22/5w0YwDQTDjVKId4Ci7lr/X5h78SGCHCACAQEQ1y8D071Y9jBLV02MCQSGIQQCAwCACiCAq0e32oTisSAbfZzA7J7MYNY4Bs9pYttA20WwjxE22kEIogEBONFFMUSmg440GiUBARADTQTjhRDZCbPJ6OaSUBgMHsTqlHNQTV3kKWlDwkCHb5V68pbKIDHmNfh5P8LgH24IGrIO3xC75iPI3RHFIK5GrkKrcvtwy/3ly60enwD88hx5Gffr4LM2hcX5ZT5wAYAoaY+tx/Dfz/D51fi1UAB6Px/ObBRwq/DVLLX59NCxur9/hfi1UP1aB0Kl1/1w8Dwv//dZcYAfv/7/f4eYUF/PW+m7O4BQfo7jrnM4obBMe38WrNFjESSQSCQGCSCRBTRIKqZJaYAur/C4UcersF4pWOfOh0wAY6dc+c7l3DAOcID9UOj9AAN8kRxYwc0gziXO/162xgEKolEEAlNFMUCE0QUQASiAu12szWaEQVBbA7TZ4fZfYQUQAQiEQAQAcyEEmSBKC2B4bZ6LR7FbQBt9PNcGPVwAw2jjjA2EemCrK6rL5nU7ANudYG4kMPBwTz2I1A0UqVDD7Xa5OupgMNvt3usUghvQ2e3k4HAumcCChfbvC7d7cBv80kVHEWqAAM8Y5LS11pBtmMJHAy0vwLSKBYSF/53g/lqcq/g856D0gcdcev9dMODOH/Oc+3XxIaJBBJYIaYEEEEkMAlMNMWGwSCSSQQQwz/ne4HFXMpBviino+HpdQP7PdfX7vd7g7foobcZ7RoD+Ujvyn8fv0NUpYKR/d1vQ3Hs9153uP1BB2fMu3VVMcGu+f4PIHjwwqbRCgcCjuFDey4ifWXAJIEdumFv9zgtgO13OYku32/EBokIoAgEEENsdsltFlZtxAIAaJRBTTTFFNMAgAoAAEUQAAAAAAQCAzGfyeKSeeuAwR6AhBJgOYE8ntcI00E4AClBET2+3uXDD4Yp457yUMIHA8gS4ZMxAcYXwT28HG8AY5PUIPACNoAHmICBJ52UAYaGHA+66sYAphtksVolAAQ0wQQCQWCSRDTDDDVTIYaFgkENVMNVVMEuBVa//zzzxIZJJLBJLDDDf/v93i/78kWmCSSSSSQwRJZZBBBDTDDEhgNNMBgNMMVQSCSWmAwwxTBZAAAAAAA")
format = 3

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4kb8u")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 323.0
offset_bottom = 299.0

[node name="Continue" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "CONTINUE"

[node name="RestartRun" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "RESTART RUN"

[node name="ViewGaps" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "VIEW GAPS"

[node name="GameOptions" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "GAME OPTIONS"

[node name="EndRun" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "END RUN"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.109
ignore_time_scale = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.119
one_shot = true
ignore_time_scale = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamWAV_4kb8u")
volume_db = -3.748

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 115.0
offset_top = 177.0
offset_right = 209.0
offset_bottom = 200.0
text = "Not Pressed"

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
